# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  objects.xml  raytracer.sln  scene_properties.xml
ENV/: CubeMap Input.txt
ENV/uffizi_gallery/: url.txt
ImageSynthesis/: .gitignore  RT_Objects.cpp  RT_Scene.cpp  RT_Scene.h  RT_math.cpp  RT_math.h  RT_properties.cpp  RT_properties.h  main.cpp  myviewer.cpp  myviewer.h
ImageSynthesis/input/: objects.xml  scene_properties.xml
assets/: objectlist.xml  objs.xml  scene.xml  sceneproperties.xml
cmake_modules/: tonkytin_build_type.cmake  tonkytin_dependencies.cmake
raytracer/: RT_Objects.cpp  RT_Objects.h  RT_Scene.cpp  RT_Scene.h  RT_math.cpp  RT_math.h  RT_properties.cpp  canvas.cpp  canvas.h  gui.cpp  gui.h  main.cpp  raytracer.qrc  raytracer.vcxproj  raytracer.vcxproj.filters  viewer.ui
raytracer/GeneratedFiles/: ui_viewer.h
source/: .clang-format  CMakeLists.txt  RT_properties.cpp  RT_properties.h  fractal.cpp  fractal.hpp  main.cpp  material.cpp  material.hpp  math_utils.hpp  perlin_noise.cpp  perlin_noise.hpp
